# intel_kivi_hybrid

./: .gitignore  LICENSE  MANIFEST.in  README.md  app.py  benchmark.py  build_wheel.sh  kivi_cache.py  pyproject.toml  setup.py  test_attention_fix.py  test_kivi.py  test_quantize_simple.py
examples/: app.py  benchmark.py  cpu_sim.py
kivi_sycl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: build_wheel.sh
src/: kivi_optimized.cpp
src/csrc/bindings/: pybind_module.cpp
src/csrc/include/kivi/: common.hpp  event.hpp
src/csrc/kernels/: dequantize_kernels.cpp  dequantize_kernels.hpp  quantize_kernels.cpp  quantize_kernels.hpp  roundtrip_kernels.cpp  roundtrip_kernels.hpp
src/csrc/kernels/internal/: quant_tile.hpp
src/csrc/ops/: kv_cache_ops.cpp  kv_cache_ops.hpp
src/kivi_sycl/: __init__.py
src/kivi_sycl/backend/: ipex.py
src/kivi_sycl/cache/: manager.py
src/kivi_sycl/config/: model_config.py
src/kivi_sycl/extension/: loader.py
src/kivi_sycl/generation/: generate.py  sampling.py
test/: test_attention_fix.py  test_kivi.py  test_quantize_simple.py
tests/: conftest.py
tests/integration/: test_attention_fix.py  test_kivi.py  test_quantize_simple.py  test_roundtrip_kernels.py
tests/unit/: test_manager_bookkeeping.py
